--- a/pom.xml
+++ b/pom.xml
@@ -380,6 +380,12 @@
 			<version>1.18.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>1.21</version>
+		</dependency>
+
 	</dependencies>
 
 	<reporting>
